--- a/statements.ipynb
+++ b/statements.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBvTgbONs0/N1NRXMZXw7N",
+      "authorship_tag": "ABX9TyMiL3iARobCFlvXnIZCZNEq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,12 +80,228 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Structures"
+      ],
+      "metadata": {
+        "id": "Jf8CYmjDnmMC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## List"
+      ],
+      "metadata": {
+        "id": "StQf5azgpki3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [1,2,3]"
+      ],
+      "metadata": {
+        "id": "cIDJmnwkpW4x"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EDRzceIepaG7",
+        "outputId": "049e7749-0ad5-491a-fe1c-a69d15c456ca"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VEqGpt4WpbyB",
+        "outputId": "827c93bf-d413-41e0-ed1e-2d834f76bdcc"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dictionary"
+      ],
+      "metadata": {
+        "id": "TOC6plYLqH1n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dict = {1:'one' , 2: 'two'}"
+      ],
+      "metadata": {
+        "id": "ZCKxTIILpiLb"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(my_dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uvqV58bOp9ia",
+        "outputId": "a6d4771d-be55-4d21-989b-3f07387b3cfe"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dict.values()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KF-qB2Cqp_ZC",
+        "outputId": "b0be8038-e273-4a71-f06c-eb73892be926"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['one', 'two'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Loops"
+      ],
+      "metadata": {
+        "id": "TXCRTh6WqQTI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for key,value in my_dict.items():\n",
+        "    print(f'This is my key:{key}')\n",
+        "    print(f'This is my value:{value}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BPpATcA_qWnT",
+        "outputId": "85261480-b223-4124-fb78-9b89e2b2eeb7"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is my key:1\n",
+            "This is my value:one\n",
+            "This is my key:2\n",
+            "This is my value:two\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for items in my_list:\n",
+        "  print(f'This is the value in the list: {items}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-jVzVxPFq4S1",
+        "outputId": "3ec626af-8838-4cf5-f46c-d6c0f3644524"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is the value in the list: 1\n",
+            "This is the value in the list: 2\n",
+            "This is the value in the list: 3\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "Jf8CYmjDnmMC"
+        "id": "SMDjn1rgrB5u"
       },
       "execution_count": null,
       "outputs": []
